[package]
name = "kernel"
version = "0.1.0"

[dependencies]
bootloader_api = "0.11"
conquer-once = { version = "0.3.2", default-features = false }
spinning_top = "0.2.4"
uart_16550 = "0.2.18"
log = "0.4.17"
acpi = "4.1.1"
x86_64 = "0.14.10"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]
