[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.10"
conquer-once = { version = "0.4.0", default-features = false }
spinning_top = "0.3.0"
uart_16550 = "0.3.2"
log = "0.4.27"
acpi = { git = "https://github.com/IsaacWoods/acpi.git" }
aml = "0.16.4"
x86_64 = { version = "0.15.2", features = ["instructions"] }
good_memory_allocator = "0.1.7"
bit_field = "0.10.1"
volatile = "0.6.1"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.noto-sans-mono-bitmap]
version = "0.3.1"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]
